# vkcube-rs

./: Cargo.toml  LICENSE  LICENSE.md  README.md  build.bash
shaders/: basic.frag  cascade_cull.comp  cluster_assign.comp  cull.comp  depth.frag  depth.vert  hbao.comp  hbao_blur.comp  overlay.frag  overlay.vert  pbr.frag  pbr.vert  probe_capture.frag  sh_project.comp  shadow.frag  shadow.vert  skybox.frag  skybox.vert  sun_shadow.frag  sun_shadow.vert  tonemap.comp
shaders/compiled/: basic.frag.spv  basic.vert.spv  cascade_cull.comp.spv  cluster_assign.comp.spv  cull.comp.spv  depth.frag.spv  depth.vert.spv  hbao.comp.spv  hbao_blur.comp.spv  overlay.frag.spv  overlay.vert.spv  probe_capture.frag.spv  sh_project.comp.spv  shadow.frag.spv  shadow.vert.spv  skybox.frag.spv  skybox.vert.spv  sun_shadow.vert.spv  tonemap.comp.spv
src/: device.rs  event.rs  gi.rs  gpu_cull.rs  lib.rs  light.rs  loader.rs  main.rs  material.rs  memory.rs  overlay.rs  pipeline.rs  postprocess.rs  profiler.rs  renderer.rs  scene.rs  simd_math.rs  texture.rs  world.rs  worldgen.rs
