[package]
name = "simmer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simmer"
path = "src/main.rs"

[lib]
name = "simmerlib"
path = "src/lib.rs"

[dependencies]
ash = { version = "0.38", features = ["linked"] }
sdl2 = { version = "0.37", features = ["bundled", "raw-window-handle"] }
gltf = { version = "1.4", features = ["KHR_materials_emissive_strength", "KHR_materials_specular"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }